--- a/src/net/vvoid/java/jac/CommandTabjPanel.form
+++ b/src/net/vvoid/java/jac/CommandTabjPanel.form
@@ -172,6 +172,9 @@
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="historyjTableMouseClicked"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
